Fix: overlap of animations over nav bar

--- a/mission/mission.scss
+++ b/mission/mission.scss
@@ -44,6 +44,7 @@ header {
   position: sticky;
   top: 0;
   background-color: $primary-color;
+  z-index: 1;
 }
 .logo img {
   height: 90px;
@@ -124,23 +125,20 @@ nav {
     animation: slide-in-left linear;
     animation-timeline: view();
     animation-range-start: cover;
-    animation-range-end: 40%;
+    animation-range-end: 30%;
   }
 
   .mission-sec__info--color-block {
     animation: slide-in-right linear;
     animation-timeline: view();
     animation-range-start: cover;
-    animation-range-end: 40%;
+    animation-range-end: 30%;
   }
 }
 
 @media screen and (min-width: 700px) {
   .mission-sec__img {
     max-height: 400px;
-  }
-  #last-mission-block {
-    animation-range-end: 30%;
   }
 
   .mission-block__img {
@@ -150,11 +148,15 @@ nav {
 
 @media screen and (min-width: 1024px) {
   #second-mission-block {
-    animation-range-end: 30%;
+    animation-range-end: 10%;
   }
 }
 
 @media screen and (min-width: 1200px) {
+  #second-mission-block {
+    animation-range-end: 30%;
+  }
+
   .mission-sec {
     &__img {
       object-position: 50% 75%;
